@@ -1,3 +1,10 @@
+(11/03/15)
+==========
+
+· ODROID: Added Tweaks > others script
+· Added Tweaks > removepkg script
+· Update Info > check lastmod image
+
 (09/03/15)
 ==========
 
